# soroban-oracle-example

./: .gitignore  README.md
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs
crates/subscriber/: Cargo.toml
crates/subscriber/src/: lib.rs
