[package]
name = "broker"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"

[dependencies.soroban-kit]
version = "0.1.8"
default-features = false
features = ["oracle"]

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
